--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-slick": "^0.25.2",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
