--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "3.1.1",
     "react-slick": "^0.25.2",
     "react-stripe-checkout": "^2.6.3",
+    "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
